增加菜单管理

--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -1,13 +1,11 @@
 
-<extend name="template/template" />
+<extend name="Template/template" />
 
 <block name="css">
 </block>
 
 <block name="content">
 
-            <div class="page-content-wrapper">
-            
                <include file="Template:welcome" />
 
                     <div class="row">
@@ -79,11 +77,4 @@
                 </div>
             </div>
 
-            
-        	
-        
-        </div>
-        
-
-        
 </block>
