--- a/Application/Admin/View/Template/template.html
+++ b/Application/Admin/View/Template/template.html
@@ -22,6 +22,8 @@
         <link href="__PUBLIC__/assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
         <link href="__PUBLIC__/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
         <!-- END GLOBAL MANDATORY STYLES -->
+        <link href="__PUBLIC__/assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
+        <link href="__PUBLIC__/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
         <!-- BEGIN PAGE LEVEL PLUGINS -->
         <link href="__PUBLIC__/assets/global/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css" />
         <link href="__PUBLIC__/assets/global/plugins/morris/morris.css" rel="stylesheet" type="text/css" />
@@ -37,14 +39,28 @@
         <link href="__PUBLIC__/assets/layouts/layout2/css/themes/blue.min.css" rel="stylesheet" type="text/css" id="style_color" />
         <link href="__PUBLIC__/assets/layouts/layout2/css/custom.min.css" rel="stylesheet" type="text/css" />
         <!-- END THEME LAYOUT STYLES -->
-        <link rel="shortcut icon" href="favicon.ico" /> 
+        <link rel="shortcut icon" href="__PUBLIC__/favicon.ico" /> 
+        
+        <script src="__PUBLIC__/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+        <script src="__PUBLIC__/admin/layer-v1.9.3/layer.js"></script>
+        <script src="__PUBLIC__/admin/js/common.js"></script>
     	<!-- END HEAD -->
     
 	    <style>
-			
+			.dataTables_filter,.dataTables_paginate{float:right;}
+			.table-responsive{overflow-x:hidden;}
+			.error{color:red;}
 		</style>
+		 <script>
+	        $(function(){
+	        	//加载扩展模块
+	        	layer.config({
+	        	    extend: '/extend/layer.ext.js'
+	        	});
+	        });
+        </script>
 		<block name="css">
-	
+			
 	    </block>
 	</head>
 	
@@ -52,11 +68,16 @@
     
 	    <include file="Template:header" />
 	    <include file="Template:menu" />
-	    
-	    <block name="content">
-	
-		</block>
-		
+	    	    
+	    <div class="page-content-wrapper">
+			<div class="page-content">
+				 
+				 <block name="content">
+						
+				 </block>
+	    	</div>
+	    </div>
+
 		<include file="Template:right" />
 		
 		<!-- 底部  -->
@@ -68,6 +89,13 @@
 	    </div>
 	
 		<block name="script"></block>
+		<script>
+			//datatable上下页
+			$(document).ready(function(){
+				$('.pagination').children('.prev').find('a').html('上一页');
+				$('.pagination').children('.next').find('a').html('下一页');
+			})
+		</script>
 	
 		<!-- END FOOTER -->
         <!--[if lt IE 9]>
@@ -75,7 +103,7 @@
 		<script src="__PUBLIC__/assets/global/plugins/excanvas.min.js"></script> 
 		<![endif]-->
         <!-- BEGIN CORE PLUGINS -->
-        <script src="__PUBLIC__/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+        
         <script src="__PUBLIC__/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="__PUBLIC__/assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
         <script src="__PUBLIC__/assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
@@ -108,16 +136,21 @@
         <script src="__PUBLIC__/assets/global/plugins/jquery.sparkline.min.js" type="text/javascript"></script>
         <script src="__PUBLIC__/assets/global/plugins/jqvmap/jqvmap/jquery.vmap.js" type="text/javascript"></script>
         
-        <!-- END PAGE LEVEL PLUGINS -->
         <!-- BEGIN THEME GLOBAL SCRIPTS -->
         <script src="__PUBLIC__/assets/global/scripts/app.min.js" type="text/javascript"></script>
         <!-- END THEME GLOBAL SCRIPTS -->
+        <script src="__PUBLIC__/assets/pages/scripts/table-datatables-managed.min.js" type="text/javascript"></script>
+        <!-- END PAGE LEVEL PLUGINS -->
+        
 
         <!-- BEGIN THEME LAYOUT SCRIPTS -->
         <script src="__PUBLIC__/assets/layouts/layout2/scripts/layout.min.js" type="text/javascript"></script>
         <script src="__PUBLIC__/assets/layouts/layout2/scripts/demo.min.js" type="text/javascript"></script>
         <script src="__PUBLIC__/assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
         <!-- END THEME LAYOUT SCRIPTS -->
+        
+        <script src="__PUBLIC__/admin/js/jquery.validate.js"></script>
+		<script src="__PUBLIC__/admin/js/messages_cn.js"></script>
 	
 	</body>
 
