后台增加管理员和角色管理

--- a/Application/Admin/View/Template/header.html
+++ b/Application/Admin/View/Template/header.html
@@ -1,10 +1,14 @@
+		<style>
+			.h_logo{font-size:18px;color:#FFFFFF;margin:20px 0;padding-left:60px;font-family:Microsoft YaHei;}
+		</style>
 
         <div class="page-header navbar navbar-fixed-top">
             <!-- BEGIN HEADER INNER -->
             <div class="page-header-inner ">
                 <div class="page-logo">
-                    <a href="index.html">
-                        <img src="__PUBLIC__/assets/layouts/layout2/img/logo-default.png" alt="logo" class="logo-default" /> </a>
+                    <a href="index.html" style="text-decoration:none;">
+      					<div class="h_logo">首页</div>  
+                    </a>
                     <div class="menu-toggler sidebar-toggler">
                         
                     </div>
@@ -54,7 +58,7 @@
                             <li class="dropdown dropdown-extended dropdown-notification" id="header_notification_bar">                                                           
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <img alt="" class="img-circle" src="__PUBLIC__/assets/layouts/layout2/img/avatar3_small.jpg" />
+                                    <img alt="" class="img-circle" src="__PUBLIC__/assets/layouts/layout2/img/fox.png" />
                                     <span class="username username-hide-on-mobile">{$ACCOUNT.account}</span>
                                 </a>
                             </li>
