--- a/Application/Admin/View/Template/template.html
+++ b/Application/Admin/View/Template/template.html
@@ -151,6 +151,8 @@
         
         <script src="__PUBLIC__/admin/js/jquery.validate.js"></script>
 		<script src="__PUBLIC__/admin/js/messages_cn.js"></script>
+		<script src="__PUBLIC__/assets/js/jquery.dataTables.min.js"></script>
+		<script src="__PUBLIC__/assets/js/jquery.dataTables.bootstrap.js"></script>
 	
 	</body>
 
