--- a/Application/Admin/View/Template/menu.html
+++ b/Application/Admin/View/Template/menu.html
@@ -1,6 +1,8 @@
 		<div class="page-container">
             <div class="page-sidebar-wrapper">
                 <div class="page-sidebar navbar-collapse collapse">
+                
+                	<!-- page-sidebar-menu-compact page-sidebar-menu-hover-submenu 普通样式菜单  -->
                     <ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
                         
                         <volist name="menu_data" id="vo">
